solc_mutator_ossfuzz_seed_corpus/test_solidity/test_7dc1f30f52dab5f301fb6e0f691011ae4bef6d76ded43c471c6c4292402d9a61_435172e95c4b70f8fc4cc23839e8c4e69fd6e4eb_sol.sol
==== Source:  ====

==== Source: su0.sol ====
error er0();
contract C0 {
  error er1();
  address  public s0 = address(this);
  address immutable public s1;
  address[1]   s2;
  constructor(address i0,address[1] memory i1)   {
    s1 = address(this);
    s2 = i1;
    {
      if (true)
      {
      }
      else if ((((int32(0) + ((int32(2147483647) & int32(1821299068)) % int32(0))) <= int32(0)) && false))
      {
      }
      else if (false)
      {
      }
      s2[0] = i1[0];
      for(;
;
[bytes17(0x0000000000000000000000000000000000), bytes17(0xa70564d5a458e3c40281de27ce17d836d5)])
      {
        revert(string("0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000"));
      }
      require((!(false)));
    }
  }
  error er2();
  modifier m0(bytes6 i0) virtual
  {
    _;
    _;
  }
  type T0 is int248;
  enum EN0 {
    M0, M1, M2, M3, M4, M5, M6, M7,
    M8, M9, M10, M11, M12, M13, M14, M15,
    M16, M17, M18, M19, M20, M21, M22, M23,
    M24, M25, M26, M27, M28, M29, M30, M31,
    M32, M33, M34, M35, M36, M37, M38, M39,
    M40, M41, M42, M43, M44, M45, M46, M47,
    M48, M49, M50, M51, M52, M53, M54, M55,
    M56, M57, M58, M59, M60, M61, M62, M63,
    M64, M65, M66, M67, M68, M69, M70, M71,
    M72, M73, M74, M75, M76, M77, M78, M79,
    M80, M81, M82, M83, M84, M85, M86, M87,
    M88, M89, M90, M91, M92, M93, M94, M95,
    M96, M97, M98, M99, M100, M101, M102, M103,
    M104, M105, M106, M107, M108, M109, M110, M111,
    M112, M113, M114, M115, M116, M117, M118, M119,
    M120, M121, M122, M123, M124, M125, M126, M127,
    M128, M129, M130, M131, M132, M133, M134, M135,
    M136, M137, M138
  }
  fallback() external virtual m0(bytes6(0x000000000000)) 
  {
    bool l0 = true;
  }
  modifier m1() virtual
  {
    C0.T0 l0 = C0.T0.wrap(int248(226156424291633194186662080095093570025917938800079226639565593765455331327));
    if ((true && false))
    {
      assembly
      {
      }
      unchecked {
        (s2[0], s2[0], s2[0]) = (address(this), s2[0], s2[0]);
        (s2[0]) = ((s2[0] = address(this)));
      }
      _;
    }
  }
  function f1(address payable i0,int208 i1) external virtual m1() m0(bytes6(0xffffffffffff)) 
  {
    if (true)
    {
      (bool l0, bytes memory l1) = address(this).call(bytes("4f713746978f46e9d32b2720334b4fa06a8a3665bdf87eb9239cfa8a879f14ad72f177dfab94027ab904566e83ea"));
    }
    new int160[](1);
  }
}
pragma solidity >= 0.0.0;
// ----
// Warning 5740: (su0.sol:452-546): Unreachable code.
// Warning 6133: (su0.sol:452-546): Statement has no effect.
// Warning 5667: (su0.sol:144-154): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 2072: (su0.sol:1704-1711): Unused local variable.
// Warning 6133: (su0.sol:2365-2380): Statement has no effect.
// Warning 5667: (su0.sol:2093-2111): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su0.sol:2112-2121): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 2072: (su0.sol:2204-2211): Unused local variable.
// Warning 2072: (su0.sol:2213-2228): Unused local variable.
// CodeGenerationError 1284: Some immutables were read from but never assigned, possibly because of optimization.
